--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -35,16 +35,18 @@ function getLink(link: any) {
     else if (fileName.startsWith('[') && fileName.endsWith(']')) return null
     else if (parseInt(fileName)) return null
 
+    if (fileName.endsWith('/')) fileName = fileName.slice(0, -1)
     var nameParts = fileName.includes('-') ? fileName.split('-') : [fileName]
     nameParts = nameParts.map((p: string) => `${p.substring(0, 1).toUpperCase()}${p.slice(1)}`)
     var name = nameParts.join(' ')
-
+    
     if (lPath.startsWith('//')) lPath = `https:${lPath}`
-    else if (lPath === 'home') lPath = '/'
-    else if (!lPath.includes('://')) lPath = `/${lPath}/`
-
-    if (lPath.endsWith('//')) lPath = lPath.slice(0, -1)
-    if (lPath.startsWith('//')) lPath = lPath.slice(1)
+    else if (lPath === 'home' || !lPath) lPath = '/'
+    else if (lPath && !lPath.includes('://') && !lPath.startsWith('/') && !lPath.endsWith('/')) lPath = `/${lPath}/`
+    
+    if (lPath.endsWith('/')) lPath = lPath.slice(0, -1)
+    // if (lPath.startsWith('/')) lPath = lPath.slice(1)
+    
 
     return { url: lPath, name }
 }
@@ -54,43 +56,47 @@ if (currentPath.endsWith('/') && currentPath !== '/') currentPath = currentPath.
 
 ---
 <header id="header" class="header" aria-label="Site navigation">
-    <a class="logo" href="/" style={`background-image: url('${logo}');`}></a>
-    <div class="flex-spacer"></div>
-    {
-        links.map((item: { url: string; name: string; target?: string, primaryCls?: string }, i: any) => {
-            var name = item.name
-            var url = item.url
-            
-            var target = item.target || '_self'
+    <a class="logo-link" href="/">
+        <img class="logo" src={logo} alt="Site logo" />
+    </a>
+    <nav class="nav">
+        {
+            links.map((item: { url: string; name: string; target?: string, primaryCls?: string }, i: any) => {
+                var name = item.name
+                var url = item.url
 
-            if (url) {
-                if (url.includes('://')) {
-                    var domain = url.split('://')[1]
-                    if (domain.includes('/')) domain = domain.split('/')[0]
-                    if (Astro.site && domain !== Astro.site.toString()) {
-                        target = '_blank'
+                
+                var target = item.target || '_self'
+
+                if (url) {
+                    if (url.includes('://')) {
+                        var domain = url.split('://')[1]
+                        if (domain.includes('/')) domain = domain.split('/')[0]
+                        if (Astro.site && domain !== Astro.site.toString()) {
+                            target = '_blank'
+                        }
+                    }
+                    if (url.endsWith('/')) url = url.slice(0, -1)
+                }
+                else if (!url) {
+                    url = '/'
+
+                    if (name !== 'Home') {
+                        url += name.toLowerCase()
                     }
                 }
-                if (url.endsWith('/')) url = url.slice(0, -1)
-            }
-            else if (!url) {
-                url = '/'
 
-                if (name !== 'Home') {
-                    url += name.toLowerCase()
-                }
-            }
+                var primaryCls = ''
+                if (url === currentPath) primaryCls = ' primary'
 
-            var primaryCls = ''
-            if (url === currentPath) primaryCls = ' primary'
+                item.url = url
+                item.target = target
+                item.primaryCls = primaryCls
 
-            item.url = url
-            item.target = target
-            item.primaryCls = primaryCls
-
-            return <a href={item.url} class={`btn nav-btn${item.primaryCls}`} target={item.target || '_self'}>{item.name}</a>
-        })
-    }
+                return <a href={item.url} class={`btn nav-btn${item.primaryCls}`} target={item.target || '_self'}>{item.name}</a>
+            })
+        }
+    </nav>
     <ThemeSwitcher defaultTheme="system"/>
 </header>
 <script>
