--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,6 +3,9 @@ import '../styles/pages/[about, contact].scss'
 
 import Layout from '../layouts/Layout.astro'
 
+// Load age first
+import age from '../../content/getAge'
+
 // Helper function to load and process about content
 async function loadAboutContent(): Promise<string> {
     const aboutFile = await import('../../content/aboutContent.md')
@@ -12,8 +15,7 @@ async function loadAboutContent(): Promise<string> {
     return rawContent.replaceAll('{ age }', age.toString())
 }
 
-// Load age and about content
-import age from '../../content/getAge'
+// Load about content
 const aboutContent = await loadAboutContent()
 
 ---
