--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,6 +3,7 @@ import '../styles/pages/projects.scss'
 import Layout from '../layouts/Layout.astro'
 import SiteGridContent from '../components/siteGridContent.astro'
 import getFName from '../../content/getFName'
+import sanitizeMD from '../lib/sanitizeMD'
 import type { ProjectCategoryConfig, PortfolioItem } from '../lib/types'
 
 // Helper function to determine link target based on URL
@@ -100,7 +101,7 @@ const allProjects: PortfolioItem[] = Object.values(allProjectsObj) as PortfolioI
                                         />
                                         <div class="item__info">
                                             <h3 class="item__title">{item.frontmatter.name}</h3>
-                                            <p class="item__content">{item.rawContent()}</p>
+                                            <p class="item__content">{sanitizeMD(item.rawContent())}</p>
                                         </div>
                                     </a>
                                 )
