--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -2,7 +2,7 @@
 import '../styles/pages/projects.scss'
 import Layout from '../layouts/Layout.astro'
 import SiteGridContent from '../components/siteGridContent.astro'
-import getFName from '../../content/getFName'
+import getFName from '../lib/getFName'
 import sanitizeMD from '../lib/sanitizeMD'
 import type { ProjectCategoryConfig, PortfolioItem } from '../lib/types'
 
