--- a/src/components/portfolioHighlights.astro
+++ b/src/components/portfolioHighlights.astro
@@ -2,7 +2,7 @@
 import '../styles/pages/portfolio.scss'
 
 import SiteGridContent from './siteGridContent.astro'
-import getFName from '../../content/getFName'
+import getFName from '../lib/getFName'
 import sanitizeMD from '../lib/sanitizeMD'
 import type { PortfolioItem } from '../lib/types'
 
