--- a/src/styles/pages/music.scss
+++ b/src/styles/pages/music.scss
@@ -1,16 +1,9 @@
 .music-area {
-    height: 100%;
-    width: 100%;
-
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(4rem, 660px));
-    gap: 1rem;
-    justify-content: center;
-
-    & iframe {
-        border: none;
+    iframe {
+        border: solid 1px var(--color);
         border-radius: 10px;
 
-        overflow:hidden;
+        overflow: hidden;
+        aspect-ratio: 16 / 9;
     }
 }
