--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -25,6 +25,5 @@ $dark-nav-hover: darken($dark-color, $change-amt);
 $dark-link-color: #0000EE;
 $dark-link-visited: #551A8B;
 
-
-$logo-a-color: hsl(195, 12%, 94%);
-$primary-btn-clr: hsl(352, 68%, 77%);
+$logo-a-color: hsl(195 12% 94%);
+$primary-btn-clr: hsl(352 68% 77%);
