--- a/src/components/themeSwitcher.astro
+++ b/src/components/themeSwitcher.astro
@@ -12,3 +12,16 @@ var systemHTML = '<path d="M480-80q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480
     <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960" set:html={systemHTML}></svg>
 </div>
 <Script name="themeSwitcher" />
+
+<style>
+    /* Hide theme switcher if CSS if() is not supported */
+    .theme-switcher {
+        display: block;
+    }
+    
+    @supports not (color: if(media(print): red; blue)) {
+        .theme-switcher {
+            display: none !important;
+        }
+    }
+</style>
