--- a/src/pages/post/[id].astro
+++ b/src/pages/post/[id].astro
@@ -3,20 +3,20 @@
 import '../../styles/pages/post.scss'
 
 import Layout from '../../layouts/Layout.astro'
-import { findPostById } from '../../lib/getPosts'
+import { findPostById, getPosts } from '../../lib/getPosts'
+import { extractSlugFromFilePath } from '../../lib/getPosts'
 
 // Helper function to get author information
 function getAuthorInfo(authors: any, authorUsername: string) {
     return authors[authorUsername as keyof typeof authors]
 }
 
-// Static paths for blog posts
+// Dynamically generate static paths from published posts
 export function getStaticPaths() {
-    return [
-        {params: {id: 'hello-world'}}, 
-        {params: {id: 'nodebooks'}}, 
-        {params: {id: 'some-old-templates-that-i-found'}}, 
-    ];
+    const posts = getPosts()
+    return posts.map(post => ({
+        params: { id: extractSlugFromFilePath(post.file) }
+    }))
 }
 
 // Get post ID from URL parameters
