--- a/src/styles/pages/post.scss
+++ b/src/styles/pages/post.scss
@@ -6,6 +6,7 @@ html {
     --pad: 1rem;
     --bor: 0.09375rem solid var(--color);
 
+    box-sizing: border-box;
     margin-inline: auto;
     width: clamp(500px, 100%, 800px);
 }
